public class Pedido {

    public void crear() {
        // Crear pedido
    }

    public void calcularTotal() {
        // Calcular total
    }

    public void guardar() {
        // Guardar en base de datos
    }

    public void enviarEmail() {
        // Enviar email
    }
}