public class MySQLPedidoRepository implements PedidoRepository {

    @Override
    public void guardar(Pedido pedido) {
        // Guardar en MySQL
    }
}