public interface PedidoRepository {

    void guardar(Pedido pedido);
}